# aafragpy

./: .gitignore  AAFragpy_tutorial.ipynb  LICENSE  MANIFEST.in  README.md  aafragpy_tutorial.ipynb  requirements.txt  setup.cfg
AAFragpy/: AAFrag.py
AAFragpy/AAFragpy_serkol.egg-info/: PKG-INFO  SOURCES.txt
AAFragpy/Tables/: el_p_He_04L  gam_He_He_04L  nan_Al_p_04  nan_p_p_04L  nu_p_He_04L  pap_Fe_p_04  pap_He_p_04L  pap_p_p_04L
AAFragpy_serkol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Tutorials/: AAFragpy_tutorial.ipynb
aafragpy/: Kafexhiu2014.py  __init__.py  aafrag.py
aafragpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aafragpy/Tables/: el_He_p_04L  el_p_p_04L  gam_p_C_04  nan_Fe_p_04  nan_He_He_04L  nan_p_C_04  nu_He_He_04L  nu_He_p_04L  pap_Al_p_04  pap_p_C_04
src/AAFragpy/: AAFrag.py  Kamae2006.py  __init__.py
src/AAFragpy/Tables/: el_He_He_04L  gam_Al_p_04  gam_Fe_p_04  gam_He_p_04L  gam_p_He_04L  gam_p_p_04L  nan_He_p_04L  nan_p_He_04L  nu_p_p_04L  pap_He_He_04L  pap_p_He_04L
