[metadata]
name = AAFragpy-serkol
version = 0.8.37
author = Sergey Koldobskiy
author_email = sakoldobskiy@mephi.ru
description = Python package for calculation of secondary particle production in nuclear interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skoldobskiy/AAFragpy
project_urls =
    Bug Tracker = https://github.com/skoldobskiy/AAFragpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
include = *