[metadata]
name = aafragpy
version = 1.01
author = Sergey Koldobskiy et al.
author_email = sakoldobskiy@mephi.ru
description = Python package for calculation of secondary particle production in nuclear interactions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/aafragpy/aafragpy
project_urls =
    Bug Tracker = https://github.com/aafragpy/aafragpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
include = *